--- a/example/ios/Podfile
+++ b/example/ios/Podfile
@@ -14,6 +14,10 @@ if linkage != nil
   use_frameworks! :linkage => linkage.to_sym
 end
 
+target 'NotificationService' do
+  pod 'OSLogStoreHelper', :path => '../../OSLogStoreHelperPod/'
+end
+
 target 'AppLogsExample' do
   config = use_native_modules!
 
