refactor: better package name, format swift code

--- a/example/ios/Podfile
+++ b/example/ios/Podfile
@@ -15,7 +15,7 @@ if linkage != nil
 end
 
 target 'NotificationService' do
-  pod 'OSLogStoreHelper', :path => '../../OSLogStoreHelperPod/'
+  pod 'AppLogs', :path => '../../AppLogsPod/'
 end
 
 target 'AppLogsExample' do
